fix on safari ios

--- a/src/App.css
+++ b/src/App.css
@@ -2,11 +2,12 @@
 *,*::before,*::after{box-sizing:border-box;}
 html,body,#root{
   margin:0;
-  height: calc(100vh + 1px); /* give Chrome a 1px buffer */
+  height:100%;          /* anchor the flexbox to “full page” */
   overscroll-behavior: none;/* ← also disables any rubber‐band on iOS */
 }
 
 html, body, #root {
+  height: calc(100vh + 1px); /* give Chrome a 1px buffer */
   overflow: hidden;
 }
 
